--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@react-three/drei": "^9.106.0",
     "@react-three/fiber": "^8.16.7",
     "@shadcn/ui": "^0.0.4",
+    "@tabler/icons-react": "^3.5.0",
     "@tsparticles/engine": "^3.4.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.4.0",
