--- a/package.json
+++ b/package.json
@@ -47,10 +47,12 @@
     "lucide-react": "^0.379.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
+    "razorpay": "^2.9.4",
     "react": "^18",
     "react-dom": "^18",
     "react-resizable-panels": "^2.0.19",
     "recharts": "^2.12.7",
+    "shortid": "^2.2.16",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
