--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-resizable-panels": "^2.0.19",
+    "react-youtube": "^10.1.0",
     "recharts": "^2.12.7",
     "shortid": "^2.2.16",
     "sonner": "^1.4.41",
